# wordle

./: Cargo.toml  index.html
src/: main.rs  utils.rs
src/components/: game.rs  instructions.rs  keyboard.rs  mod.rs  row.rs
