[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", features=["web"] }
rand = "0.8.4"
getrandom = { version = "0.2.4", features = ["js"] }
web-sys = { version = "0.3.55", features = ["console"] }
